# baBLE

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  RELEASE.md  generate_fb_schemas.sh  generate_schemas.sh  python_interface.py  sample_binary.py
interfaces/: requirements.txt
interfaces/python/: .gitignore  .pylintrc  MANIFEST.in  README.md  RELEASE.md  build_requirements.txt  python_interface.py  requirements.txt  setup.py  test.py  tox.ini
interfaces/python/BaBLE/: BaBLEError.py  DeviceConnected.py  DeviceDisconnected.py  DeviceFound.py  Disconnect.py  Discovering.py  GetControllerInfo.py  NotificationReceived.py  Payload.py  ProbeCharacteristics.py  Ready.py  StopScan.py  WriteWithoutResponse.py
interfaces/python/bable_interface/: __init__.py  bable_class.py  bable_interface.py  commands_manager.py  commands_py2.py  commands_py3.py  flatbuffer.py  flatbuffers_functions.py  flatbuffers_packets.py  receiving_thread.py  utils.py  working_thread.py
interfaces/python/scripts/: release.py
interfaces/python/test/: test_bable_interface.py
interfaces/python/tests/: conftest.py  test_bable_interface.py  test_bable_script.py  test_commands_manager.py  test_integration.py  test_packet.py  test_packet_uuid.py  test_utils.py
protocol/: Packet.fbs
protocol/Commands/: AddDevice.fbs  CancelConnection.fbs  Connect.fbs  Disconnect.fbs  EmitNotification.fbs  GetConnectedDevices.fbs  GetControllerInfo.fbs  GetControllersIds.fbs  ProbeCharacteristics.fbs  ReadCentral.fbs  ReadPeripheral.fbs  RemoveDevice.fbs  SetAdvertising.fbs  StartScan.fbs  StopScan.fbs  WriteCentral.fbs  WritePeripheral.fbs  WriteWithoutResponseCentral.fbs  WriteWithoutResponsePeripheral.fbs
protocol/Control/: SetGATTTable.fbs
protocol/Errors/: ErrorResponse.fbs
protocol/Events/: DeviceChanged.fbs  DeviceConnected.fbs  DeviceDisconnected.fbs  DeviceFound.fbs  NotificationReceived.fbs
protocol/Models/: Characteristic.fbs  Controller.fbs  Device.fbs
protocole/: Packet.fbs
protocole/Commands/: Disconnect.fbs  GetConnectedDevices.fbs  RemoveDevice.fbs
protocole/Events/: ControllerChanged.fbs  DeviceConnected.fbs  DeviceFound.fbs
protocole/Models/: Service.fbs
schemas/: GetMGMTInfoPayload.fbs  Packet.fbs  Scan.fbs
schemas/Commands/: AddDevice.fbs  Disconnect.fbs  GetConnectedDevices.fbs  GetControllerInfo.fbs  GetControllersIds.fbs  GetControllersList.fbs  GetMGMTInfo.fbs  ProbeCharacteristics.fbs  ProbeServices.fbs  Read.fbs  RemoveDevice.fbs  SetConnectable.fbs  SetDiscoverable.fbs  SetPowered.fbs  StartScan.fbs  StopScan.fbs  Write.fbs  WriteWithoutResponse.fbs
schemas/Control/: Exit.fbs  Ready.fbs
schemas/Errors/: BaBLEError.fbs
schemas/Events/: ControllerChanged.fbs  DeviceConnected.fbs  DeviceDisconnected.fbs  DeviceFound.fbs  Discovering.fbs  NotificationReceived.fbs
schemas/Models/: Characteristic.fbs  Controller.fbs  Service.fbs
src/: Deserializer.cpp  Deserializer.hpp  Log.cpp  Log.h  Log.hpp  MGMTSocket.cpp  MGMTSocket.hpp  Serializer.cpp  Serializer.hpp  bootstrap.hpp  main.cpp
src/Application/: AbstractPacket.hpp  ResponseId.hpp
src/Application/PacketContainer/: PacketContainer.cpp  PacketContainer.hpp
src/Application/Packets/: constants.hpp
src/Builder/: AbstractBuilder.hpp  PacketBuilder.cpp  PacketBuilder.hpp
src/Builder/Ascii/: AsciiBuilder.cpp  AsciiBuilder.hpp
src/Builder/Flatbuffers/: FlatbuffersBuilder.cpp  FlatbuffersBuilder.hpp
src/Builder/MGMT/: MGMTBuilder.cpp  MGMTBuilder.hpp
src/Commands/: AbstractCommand.cpp  AbstractCommand.hpp  CommandManager.hpp  GetMGMTInfoCommand.cpp  GetMGMTInfoCommand.hpp
src/Exceptions/: AbstractException.hpp  constants.hpp
src/Exceptions/InvalidCommand/: InvalidCommandException.cpp  InvalidCommandException.hpp
src/Exceptions/NotFound/: NotFoundException.cpp  NotFoundException.hpp
src/Exceptions/Socket/: SocketException.cpp  SocketException.hpp
src/Exceptions/WrongFormat/: WrongFormatException.cpp  WrongFormatException.hpp
src/Format/: AbstractExtractor.hpp  AbstractFormat.hpp
src/Format/Ascii/: AsciiFormat.cpp  AsciiFormat.hpp  AsciiFormatBuilder.cpp  AsciiFormatBuilder.hpp  AsciiFormatExtractor.cpp  AsciiFormatExtractor.hpp  constants.hpp
src/Format/Flatbuffers/: FlatbuffersFormat.cpp  FlatbuffersFormat.hpp  FlatbuffersFormatBuilder.cpp  FlatbuffersFormatBuilder.hpp  FlatbuffersFormatExtractor.cpp  FlatbuffersFormatExtractor.hpp
src/Format/HCI/: HCIFormat.hpp  HCIFormatBuilder.cpp  HCIFormatBuilder.hpp  HCIFormatExtractor.cpp  HCIFormatExtractor.hpp  constants.hpp
src/Format/MGMT/: MGMTFormat.cpp  MGMTFormat.hpp  MGMTFormatBuilder.cpp  MGMTFormatBuilder.hpp  MGMTFormatExtractor.cpp  MGMTFormatExtractor.hpp  constants.hpp
src/Log/: Log.cpp  Log.hpp  Loggable.hpp
src/Packet/: AbstractPacket.hpp  constants.hpp
src/Packet/BaBLEError/: BaBLEErrorPacket.cpp  BaBLEErrorPacket.hpp
src/Packet/Commands/: CommandPacket.hpp
src/Packet/Events/: EventPacket.hpp
src/Packet/Responses/: ResponsePacket.hpp
src/PacketContainer/: PacketContainer.cpp  PacketContainer.hpp
src/Poller/: PipePoller.cpp  PipePoller.hpp  Poller.cpp  Poller.hpp
src/Router/: Router.cpp  Router.hpp
src/Serializer/: AbstractSerializer.cpp  AbstractSerializer.hpp  Deserializer.cpp  Deserializer.hpp  Serializer.cpp  Serializer.hpp
src/Socket/: AbstractSocket.hpp  MGMTSocket.cpp  MGMTSocket.hpp  SocketManager.hpp
src/Socket/HCI/: HCISocket.cpp  HCISocket.hpp
src/Socket/MGMT/: MGMTSocket.cpp  MGMTSocket.hpp
src/Socket/StdIO/: StdIOSocket.hpp
src/SocketContainer/: SocketContainer.cpp  SocketContainer.hpp
src/Transport/: AbstractSocket.hpp
src/Transport/SocketContainer/: SocketContainer.cpp  SocketContainer.hpp
src/Transports/: AbstractSocket.hpp
src/Transports/MGMT/: MGMTSocket.cpp  MGMTSocket.hpp
src/interfaces/: BaBLEIOInterface.h  BluetoothIOInterface.h  SerializerInterface.h
src/utils/: colors.h  stream_formats.hpp
tools/: generate_schemas.sh  install_flatbuffers.sh  release.py
tools/cpp-compilation/: Dockerfile  compile.sh  docker-compose.yml  load_docker.sh
(+185 files in other folders)
